# smhi-data-quality-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
src/: __init__.py
src/api/: __init__.py  base_client.py  hydroobs_client.py  metobs_client.py
src/quality/: __init__.py  report.py  scorer.py
src/utils/: __init__.py  config.py  logging_config.py
src/validation/: __init__.py  anomaly_detector.py  completeness.py  range_validator.py  schema_validator.py
tests/: conftest.py  test_anomaly_detector.py  test_completeness.py  test_hydroobs_client.py  test_metobs_client.py  test_range_validator.py  test_schema_validator.py  test_scorer.py
